--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 			<id>codemc-repo</id>
 			<url>https://repo.codemc.org/repository/maven-public/</url>
 		</repository>
+
+		<repository>
+			<id>jitpack.io</id>
+			<url>https://jitpack.io</url>
+		</repository>
 	</repositories>
 
 	<dependencies>
@@ -93,7 +98,11 @@
 			<version>1.2.3</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.github.ConnorLinfoot</groupId>
+			<artifactId>TitleAPI</artifactId>
+			<version>1.7.6</version>
+		</dependency>
 
 
 
